[project]
name = "abides-acc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cycler>=0.12.1",
    "joblib>=1.5.0",
    "kiwisolver>=1.4.8",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pprofile>=2.2.0",
    "psutil>=7.0.0",
    "pyparsing>=3.2.3",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "six>=1.17.0",
    "tqdm>=4.67.1",
]
